--- a/res/poster-svg.html
+++ b/res/poster-svg.html
@@ -36,8 +36,8 @@
 			<text x="360" y="165" class="uname">poker</text>
 			<text x="360" y="400" class="money">
 				<tspan dominant-baseline="ideographic">已兑换</tspan>
-				<tspan class="money-count">1.50</tspan>
-				<tspan dominant-baseline="ideographic">元现金</tspan>
+				<tspan dx="40" class="money-count">1.50</tspan>
+				<tspan dx="40" dominant-baseline="ideographic">元现金</tspan>
 			</text>
 		</svg>
 		<script>
