--- a/res/poster-canvas.html
+++ b/res/poster-canvas.html
@@ -11,7 +11,7 @@
           let img = new Image();
           img.setAttribute('crossOrigin', 'Anonymous');
           img.onload = function () {
-              return resolve(this);
+            resolve(this);
           };
           img.src = url;
         });
