--- a/res/compress-svg.html
+++ b/res/compress-svg.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>css:mask-image demo</title>
+		<title>clip using svg</title>
 	</head>
 	<body>
 		<style>
